# cookie_flask

./: .pre-commit-config.yaml  Procfile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project}}/: .gitignore  .pre-commit-config.yaml  app.py  config.py  gunicorn.config.py  pyproject.toml  readme.md  requirements.txt
{{cookiecutter.project}}/tests/: conftest.py
{{cookiecutter.project}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project}}/{{cookiecutter.project_slug}}/templates/: 404.html
