[tool.poetry]
name = "hacker"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
ipython = "^7.19.0"
jedi = "0.17.2"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"
python-dotenv = "^0.15.0"
environs = "^9.3.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
pytest = "^6.2.1"
pytest-clarity = "^0.3.0-alpha.0"
pendulum = "^2.1.2"
prettyprinter = "^0.18.0"
rich = "^9.8.2"
pytest-pythonpath = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
