[tool.poetry]
name = "{{ cookiecutter.project }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
ipython = "^7.19.0"
jedi = "0.17.2"
Flask-WTF = "^0.14.3"
email-validator = "^1.1.2"
environs = "^9.3.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"
pytest = "^6.2.1"
pytest-clarity = "^0.3.0-alpha.0"
prettyprinter = "^0.18.0"
pytest-pythonpath = "^0.7.3"
pytest-emoji = "^0.2.0"
respx = "^0.16.3"
vcrpy = "^4.1.1"

[tool.pytest.ini_options]
addopts = "-rssxX -l --tb=short --strict --emoji -vvv -p no:warnings"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
